[package]
name = "rust_ray_tracing"
version = "0.1.0"
authors = ["colton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11.1"
rand = "0.8.3"

[dependencies.tokio]
version = "1.6.1"
default-features = true

features = ["full"]